--- a/templates/office/purchase_bill.html
+++ b/templates/office/purchase_bill.html
@@ -202,7 +202,7 @@
                 <input oninput="farmer_check()" id="customer_add" name="address" type="text" value="" class="form-control mt-2" placeholder="पत्ता" required>
 
                 <div class="flex">
-                    <div><input oninput="farmer_check(), check_number()" id="customer_mobile" value="" name="mobile" type="text" class="form-control mt-2" placeholder="मोबाइल नंबर " required></div>
+                    <div><input oninput="farmer_check(), check_number()" id="customer_mobile" value="" name="mobile" type="number" class="form-control mt-2" placeholder="मोबाइल नंबर " required></div>
                     <div id="add_customer_btn"><button onclick="save_farmer()" class="btn btn-primary mt-2" name="add_customer">जतन करा</button></div>
                     <div id="cancel_farmer" style="display: none;"><button onclick="cancel_farmer()" class="btn text-danger">X</button></div>
                 </div>
