--- a/templates/include/office/office_menu.html
+++ b/templates/include/office/office_menu.html
@@ -12,6 +12,7 @@
     <a  href="/office/sell_completed_bills/" class="my-1 {% if request.path == '/office/sell_completed_bills/' %}btn btn-warning{% else %}btn btn-primary{% endif %}">विक्री मागील बिले</a>
     <a  href="/office/purchase_bill/" class="my-1 {% if request.path == '/office/purchase_bill/' %}btn btn-warning{% else %}btn btn-primary{% endif %}">खरेदी नवीन बिल</a>
     <a  href="/office/purchase_completed_bills/" class="my-1 {% if request.path == '/office/purchase_completed_bills/' %}btn btn-warning{% else %}btn btn-primary{% endif %}">खरेदी मागील बिले</a>
+    <a  href="/office/purchase_farmer/" class="my-1 {% if request.path == '/office/purchase_farmer/' %}btn btn-warning{% else %}btn btn-primary{% endif %}">खरेदी शेतकरी</a>
     <a  href="/office/item/" class="my-1 {% if request.path == '/office/item/' %}btn btn-warning{% else %}btn btn-primary{% endif %}">Item</a>
     <a  href="/office/add_employee/" class="my-1 {% if request.path == '/office/add_employee/' %}btn btn-warning{% else %}btn btn-primary{% endif %}">Add Employee</a>
     <a href="/office_logout/" class="btn btn-danger my-1">Logout</a>
