--- a/templates/ajax/office/sell_bill_ajax.html
+++ b/templates/ajax/office/sell_bill_ajax.html
@@ -47,7 +47,7 @@
                             </div>
                             <div class="modal-body">
                                 <b class="text-danger"> {{c.item.item_name_marathi}} </b> कार्ट मधून  काढायचे आहे का ? <br><br>
-                                <a onclick="delete_purchase_cart_item('{{c.id}}')" class="btn btn-danger" data-bs-dismiss="modal" >काढून टाका</a>
+                                <a onclick="delete_sell_cart_item('{{c.id}}')" class="btn btn-danger" data-bs-dismiss="modal" >काढून टाका</a>
                         </div>
                         <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
