--- a/templates/office/purchase_bill.html
+++ b/templates/office/purchase_bill.html
@@ -89,6 +89,7 @@
     <div class="bill_main_box">
         <div class="header">
             <div class="shope_name">{{employee.shope.shope_name}}</div>
+            <p>खरेदी बिल</p>
 
         </div>
 
@@ -157,7 +158,7 @@
                 <br>
                 <div class="list-group">
                     
-                    <input type="text" class="form-control mb-1" placeholder="Item Name" oninput="search_item(this.value)">
+                    <input type="text" class="form-control mb-1" placeholder="मालाचे नाव शोधा" oninput="search_item(this.value)">
                     <div id="item_result">
                         
                     </div>
@@ -203,7 +204,7 @@
 
                 <div class="flex">
                     <div><input oninput="farmer_check(), check_number()" id="customer_mobile" value="" name="mobile" type="number" class="form-control mt-2" placeholder="मोबाइल नंबर " required></div>
-                    <div id="add_customer_btn"><button onclick="save_farmer()" class="btn btn-primary mt-2" name="add_customer">जतन करा</button></div>
+                    <div id="add_customer_btn"><a onclick="save_farmer()" class="btn btn-primary mt-2" name="add_customer">जतन करा</a></div>
                     <div id="cancel_farmer" style="display: none;"><button onclick="cancel_farmer()" class="btn text-danger">X</button></div>
                 </div>
         </div>
@@ -296,7 +297,7 @@ function farmer_check(){
                             document.getElementById('add_customer_btn').innerHTML = `<div class='alert alert-danger'>मोबाइल नंबर वापरलेला आहे </div> `
                         }
                         if (Number(res.add_btn_status) == '1'){
-                            document.getElementById('add_customer_btn').innerHTML = `<button onclick="save_farmer()" class="btn btn-primary mt-2" name="add_customer">जतन करा</button>`
+                            document.getElementById('add_customer_btn').innerHTML = `<a onclick="save_farmer()" class="btn btn-primary mt-2" name="add_customer">जतन करा</a>`
                         }
                     }
             })
