--- a/templates/office/sell_bill.html
+++ b/templates/office/sell_bill.html
@@ -89,7 +89,7 @@
     <div class="bill_main_box">
         <div class="header">
             <div class="shope_name">{{employee.shope.shope_name}}</div>
-
+            <p>विक्री बिल</p>
         </div>
 
             <input type="hidden" value="{{customer.id}}" name="customer_id">
@@ -141,7 +141,7 @@
                             </div>
                             <div class="modal-body">
                                 <b class="text-danger"> {{c.item.item_name_marathi}} </b> कार्ट मधून  काढायचे आहे का ? <br><br>
-                                <a onclick="delete_purchase_cart_item('{{c.id}}')" class="btn btn-danger" data-bs-dismiss="modal" >काढून टाका</a>
+                                <a onclick="delete_sell_cart_item('{{c.id}}')" class="btn btn-danger" data-bs-dismiss="modal" >काढून टाका</a>
                         </div>
                         <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -157,7 +157,7 @@
                 <br>
                 <div class="list-group">
                     
-                    <input type="text" class="form-control mb-1" placeholder="Item Name" oninput="search_item(this.value)">
+                    <input type="text" class="form-control mb-1" placeholder="मालाचे नाव शोधा" oninput="search_item(this.value)">
                     <div id="item_result">
                         
                     </div>
@@ -199,14 +199,14 @@
         <div class="customer_detail">
             <input type="hidden" name="customer_id" id="customer_id">
             <div class="customer_name"><input  oninput="customer_check()" id="customer_name" value="" name="name" type="text" class="form-control" placeholder="नाव" required></div>
-                <input oninput="customer_check()" id="customer_add" name="address" type="text" value="" class="form-control mt-2" placeholder="पत्ता" required>
-
+            <input oninput="customer_check()" id="customer_add" name="address" type="text" value="" class="form-control mt-2" placeholder="पत्ता" required>
                 <div class="flex">
                     <div><input oninput="customer_check(), check_number()" id="customer_mobile" value="" name="mobile" type="number" class="form-control mt-2" placeholder="मोबाइल नंबर " required></div>
-                    <div id="add_customer_btn"><button onclick="save_customer()" class="btn btn-primary mt-2" name="add_customer">जतन करा</button></div>
+                    <div id="add_customer_btn"><a onclick="save_sell_customer()" class="btn btn-primary mt-2">जतन करा</a></div>
                     <div id="cancel_customer" style="display: none;"><button onclick="cancel_customer()" class="btn text-danger">X</button></div>
                 </div>
         </div>
+
         <div id="customer_result"></div>
 
         <button type="submit"  class="btn btn-danger mb-2 mt-2" name="complete_bill">बिल पूर्ण करा</button>
@@ -251,7 +251,7 @@ function select_customer(id, name, mobile, address){
     document.getElementById('cancel_customer').style.display = 'flex';
 }
 
-function save_customer(){
+function save_sell_customer(){
     name = document.getElementById('customer_name').value;
     address = document.getElementById('customer_add').value;
     mobile = document.getElementById('customer_mobile').value;
@@ -260,7 +260,7 @@ function save_customer(){
     }
     else{
     $.ajax({
-        url: "{% url 'save_customer' %}",
+        url: "{% url 'save_sell_customer' %}",
         method: "GET",
         data:{
             name:name,
@@ -296,7 +296,7 @@ function customer_check(){
                             document.getElementById('add_customer_btn').innerHTML = `<div class='alert alert-danger'>मोबाइल नंबर वापरलेला आहे </div> `
                         }
                         if (Number(res.add_btn_status) == '1'){
-                            document.getElementById('add_customer_btn').innerHTML = `<button onclick="save_customer()" class="btn btn-primary mt-2" name="add_customer">जतन करा</button>`
+                            document.getElementById('add_customer_btn').innerHTML = `<a onclick="save_sell_customer()" class="btn btn-primary mt-2">जतन करा</a>`
                         }
                     }
             })
@@ -377,7 +377,7 @@ function total_amount_calculate(old_amount){
 
 
 
-
+ 
 function add_to_item_weight(c_id,item_id){
     $.ajax({
             url: "{% url 'add_to_item_weight_sell' %}",
@@ -440,13 +440,13 @@ function search_item(item_name){
         }
     })
 }
-function delete_purchase_cart_item(c_id){
+function delete_sell_cart_item(c_id){
     var data = {
         c_id: c_id,
     }
     $.ajax({
         type: 'GET',
-        url: '{% url "delete_purchase_cart_item" %}',
+        url: '{% url "delete_sell_cart_item" %}',
         data: data,
         success: function(response){
             location.reload()
