--- a/templates/office/sell_bill.html
+++ b/templates/office/sell_bill.html
@@ -272,6 +272,7 @@ function save_sell_customer(){
             document.getElementById('add_customer_btn').style.display = 'none';
             document.getElementById('cancel_customer').style.display = 'flex';
             document.getElementById('customer_id').value = res.id
+            $("#customer_result").html('')
         }
     })
 }
