--- a/templates/include/office/office_menu.html
+++ b/templates/include/office/office_menu.html
@@ -15,5 +15,6 @@
     <a  href="/office/purchase_farmer/" class="my-1 {% if request.path == '/office/purchase_farmer/' %}btn btn-warning{% else %}btn btn-primary{% endif %}">खरेदी शेतकरी</a>
     <a  href="/office/item/" class="my-1 {% if request.path == '/office/item/' %}btn btn-warning{% else %}btn btn-primary{% endif %}">Item</a>
     <a  href="/office/add_employee/" class="my-1 {% if request.path == '/office/add_employee/' %}btn btn-warning{% else %}btn btn-primary{% endif %}">Add Employee</a>
+    <a  href="/terms_and_conditions/" class="my-1 {% if request.path == '/terms_and_conditions/' %}btn btn-warning{% else %}btn btn-primary{% endif %}">Terms And Conditions</a>
     <a href="/office_logout/" class="btn btn-danger my-1">Logout</a>
 </div>
