--- a/templates/office/purchase_bill.html
+++ b/templates/office/purchase_bill.html
@@ -172,23 +172,23 @@
                 <div class="other_charges_box" >
                     <div class="other_charges">
                         <div class="lable">हमाली</div>
-                        <div class="containt"> <input type="number" value="" class="check_zero1" name="hamali" id="हमाली" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('हमाली')"  required> </div>
+                        <div class="containt"> <input type="number" class="check_zero1" name="hamali" value="{% calculete_hamali_percentage_purchase employee.id %}" id="हमाली" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('हमाली')"  required> </div>
                     </div>
                     <div class="other_charges">
                         <div class="lable">तोलाई</div>
-                        <div class="containt"> <input type="number" value="" class="check_zero2" name="tolai" id="तोलाई" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('तोलाई')" required> </div>
+                        <div class="containt"> <input type="number" class="check_zero2" name="tolai" value="{% calculete_tolai_percentage_purchase employee.id %}" id="तोलाई" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('तोलाई')" required> </div>
                     </div>
                     <div class="other_charges">
                 <div class="lable">आडत</div>
-                <div class="containt"> <input type="number" name="aadat" value="" class="check_zero3" id="आडत" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('आडत')"  required> </div>
+                <div class="containt"> <input type="number" name="aadat" value="{% calculete_aadat_percentage_purchase employee.id %}" class="check_zero3" id="आडत" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('आडत')"  required> </div>
             </div>
             <div class="other_charges">
                 <div class="lable">शेअर्स</div>
-                <div class="containt"> <input step="any" type="number" value="" name="shears" class="check_zero4" id="शेअर्स" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('शेअर्स')" required> </div>
+                <div class="containt"> <input step="any" type="number" value="{% calculete_shears_percentage_purchase employee.id %}" name="shears" class="check_zero4" id="शेअर्स" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('शेअर्स')" required> </div>
             </div>
             <div class="other_charges">
                 <div class="lable">इतर</div>
-                <div class="containt"> <input type="number" name="eater" id="इतर" class="check_zero5" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('इतर')" required> </div>
+                <div class="containt"> <input type="number" name="eater" value="{% calculete_eater_percentage_purchase employee.id %}" id="इतर" class="check_zero5" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('इतर')" required> </div>
             </div>
             <div class="other_charges">
                 <div class="lable">एकूण</div>
@@ -231,6 +231,19 @@
 <!--TODO-------------------------------------------------------------------------- -->
 
 <script>
+function cart_qty(cart_id){
+    $.ajax({
+        url: "{% url 'change_purchase_cart_qty' %}",
+        method: "GET",
+        data:{
+            cart_id:cart_id,
+            qty:document.getElementById('cart_qty'+cart_id).value
+        },
+        success: function(res){
+            $("#item_weight_result").html(res.t)
+        }
+    })
+}
 
 function cancel_farmer(){
     document.getElementById('farmer_id').value = '';
