--- a/templates/sunil/sunil_home.html
+++ b/templates/sunil/sunil_home.html
@@ -57,8 +57,8 @@
         <th scope="col">Shope Name</th>
         <th scope="col">Owner Name</th>
         <th scope="col">Mobile</th>
-        <th scope="col">Pin</th>
         <th scope="col">Status</th>
+        <th scope="col">Login</th>
         <th scope="col">Edit</th>
       </tr>
     </thead>
@@ -68,9 +68,15 @@
         <th scope="row">{{forloop.counter}}</th>
         <td>{{s.shope_name}}</td>
         <td>{{s.owner_name}}</td>
-        <td>{{s.mobile}}</td>
-        <td>{{s.pin}}</td>
+        <td><a href="tel:{{s.mobile}}" class="btn btn-sm"><i class="fa-solid fa-phone"></i></a>{{s.mobile}}</td>
         <td><form class="" method="POST">{% csrf_token %}{% if s.status == 1 %}<button class="btn btn-success" type="submit" name="active">Active<input type="hidden" name="id" value="{{s.id}}"></button>{% else %}<button class="btn btn-danger" type="submit" name="deactive">Deactive<input type="hidden" name="id" value="{{s.id}}"></button>{% endif %}</form></td>
+        <td>
+          <form method="POST">
+            {% csrf_token %}
+            <input type="hidden" name="id" value="{{s.id}}">
+            <button class="btn btn-info" type="submit" name="login">Login</button>
+          </form>
+        </td>
         <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Add_shope{{s.id}}">Edit</button></td>
       </tr>
       <div class="modal fade" id="Add_shope{{s.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
