--- a/templates/office/item_detail.html
+++ b/templates/office/item_detail.html
@@ -75,23 +75,23 @@
             <div class="contaier_inner_box_a">
                 <div class="contaier_inner_box_b">
                     <div>हमाली 1kg</div>
-                    <div>Rs.<input type="number" value="{{item.purchase_hamali}}" name="purchase_hamali" style="width: 50px;" required></div>
+                    <div>Rs.<input step="any" type="number" value="{{item.purchase_hamali}}" name="purchase_hamali" style="width: 50px;" required></div>
                 </div>
                 <div class="contaier_inner_box_b">
                     <div>तोलाई 1kg</div>
-                    <div>Rs.<input type="number" value="{{item.purchase_tolai}}" name="purchase_tolai" style="width: 50px;" required></div>
+                    <div>Rs.<input step="any" type="number" value="{{item.purchase_tolai}}" name="purchase_tolai" style="width: 50px;" required></div>
                 </div>
                 <div class="contaier_inner_box_b">
                     <div>आडत %</div>
-                    <div><input type="number" value="{{item.purchase_aadat}}" name="purchase_aadat" style="width: 50px;" required></div>
+                    <div><input step="any" type="number" value="{{item.purchase_aadat}}" name="purchase_aadat" style="width: 50px;" required></div>
                 </div>
                 <div class="contaier_inner_box_b">
                     <div>शेअर्स %</div>
-                    <div><input type="number" value="{{item.purchase_shears}}" name="purchase_shears" style="width: 50px;" required></div>
+                    <div><input step="any" type="number" value="{{item.purchase_shears}}" name="purchase_shears" style="width: 50px;" required></div>
                 </div>
                 <div class="contaier_inner_box_b">
                     <div>इतर % </div>
-                    <div><input type="number" value="{{item.purchase_eater}}" name="purchase_eater" style="width: 50px;" required></div>
+                    <div><input step="any" type="number" value="{{item.purchase_eater}}" name="purchase_eater" style="width: 50px;" required></div>
                 </div>
             </div>
             <br>
@@ -108,23 +108,23 @@
             <div class="contaier_inner_box_a" >
             <div class="contaier_inner_box_b">
                 <div>हमाली 1kg</div>
-                <div>Rs.<input type="number" value="{{item.sell_hamali}}" name="sell_hamali" style="width: 50px;" required></div>
+                <div>Rs.<input step="any" type="number" value="{{item.sell_hamali}}" name="sell_hamali" style="width: 50px;" required></div>
             </div>
             <div class="contaier_inner_box_b">
                 <div>तोलाई 1kg</div>
-                <div>Rs.<input type="number" value="{{item.sell_tolai}}" name="sell_tolai" style="width: 50px;" required></div>
+                <div>Rs.<input step="any" type="number" value="{{item.sell_tolai}}" name="sell_tolai" style="width: 50px;" required></div>
             </div>
             <div class="contaier_inner_box_b">
                 <div>आडत %</div>
-                <div><input type="number" value="{{item.sell_aadat}}" name="sell_aadat" style="width: 50px;" required></div>
+                <div><input step="any" type="number" value="{{item.sell_aadat}}" name="sell_aadat" style="width: 50px;" required></div>
             </div>
             <div class="contaier_inner_box_b">
                 <div>शेअर्स %</div>
-                <div><input type="number" value="{{item.sell_shears}}" name="sell_shears" style="width: 50px;" required></div>
+                <div><input step="any" type="number" value="{{item.sell_shears}}" name="sell_shears" style="width: 50px;" required></div>
             </div>
             <div class="contaier_inner_box_b">
                 <div>इतर %</div>
-                <div><input type="number" value="{{item.sell_eater}}" name="sell_eater" style="width: 50px;" required></div>
+                <div><input step="any" type="number" value="{{item.sell_eater}}" name="sell_eater" style="width: 50px;" required></div>
             </div>
         </div>
         <br>
