--- a/templates/include/alert.html
+++ b/templates/include/alert.html
@@ -1,14 +1,32 @@
-
-
-
+<!--  #views
+from django.contrib import messages
+messages.warning(request,"text")
+-->
+{% load static %}
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 {% if messages %}
 
     {% for message in messages %}
-    <div class="alert alert-{% if message.tags %}{{ message.tags }}{% endif %}" role="alert">
 
-        {{ message }}
-    
-</div>
+    <script>
+        Swal.fire({
+            title: "{{ message }}",
+            text: "",
+            icon: "{{message.tags}}",
+            timer: 3000,
+            timerProgressBar: true,
+            didOpen: () => {
+                const timer = Swal.getPopup().querySelector("b");
+                timerInterval = setInterval(() => {
+                }, 500);
+            },
+            willClose: () => {
+                clearInterval(timerInterval);
+            }
+        });
+
+
+    </script>
     {% endfor %}
 
 {% endif %}
