--- a/templates/office/completed_view_sell_bill.html
+++ b/templates/office/completed_view_sell_bill.html
@@ -172,7 +172,7 @@ a{
         </div>
         {% for o in order_detail %}
         <div class="containt_box_main_contaont" style="border-top: 1px solid black;">
-            <div style="border: none;">{{o.item.marathi_name}}</div>
+            <div style="border: none;">{{o.item_name}}</div>
             <div>{{o.qty}}</div>
             <div>{{o.weight}}</div>
             <div>{{o.prise}}</div>
