--- a/templates/office/sell_bill.html
+++ b/templates/office/sell_bill.html
@@ -381,7 +381,7 @@ function check_weight_greter(stock_weight, c_id){
     }
 }
 function total_amount_calculate(old_amount){
-    new_amount = Number(old_amount) -
+    new_amount = Number(old_amount) +
              (
                 Number(document.getElementById('हमाली').value) + 
                 Number(document.getElementById('तोलाई').value) + 
