--- a/templates/office/pay_sell_bill.html
+++ b/templates/office/pay_sell_bill.html
@@ -17,7 +17,7 @@
     {% if paid_total_amount > bill_total_amount %}
         <div class="text-danger"><b>Rs.{{final_amount}}</b> शेतकऱ्याला ॲडव्हान्स दिला </div>
     {% else %}
-        <div class="text-success"><b>Rs.{{final_amount}}</b> शेतकऱ्यास येणे बाकी  </div>
+        <div class="text-success"><b>Rs.{{final_amount}}</b> शेतकऱ्याकडून येणे बाकी  </div>
     {% endif %}
     <b></b>
 </div>
