--- a/templates/office/pay_sell_bill.html
+++ b/templates/office/pay_sell_bill.html
@@ -15,9 +15,9 @@
 <div class="text-center">
     <b>{{customer.name}}</b><br>
     {% if paid_total_amount > bill_total_amount %}
-        <div class="text-danger"><b>Rs.{{final_amount}}</b> शेतकऱ्याकडून ॲडव्हान्स जमा </div>
+        <div class="text-danger"><b>Rs.{{final_amount}}</b> ॲडव्हान्स जमा </div>
     {% else %}
-        <div class="text-success"><b>Rs.{{final_amount}}</b> शेतकऱ्याकडून येणे बाकी  </div>
+        <div class="text-success"><b>Rs.{{final_amount}}</b> येणे बाकी  </div>
     {% endif %}
     <b></b>
 </div>
